--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>SullNote - Note Taking Made Easy</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.5.3/jspdf.debug.js"></script>
+</head>
+<body>
+    <header>
+        <h1>SullNote</h1>
+    </header>
+    
+    <main>
+        <div id="note-area">
+            <input type="text" id="note-title" placeholder="New Note">
+            <textarea id="note-body" placeholder="Your notes go here..."></textarea>
+        </div>
+        
+        <div id="buttons-area">
+            <button id="save-btn">Save</button>
+            <button id="download-btn">Download as PDF</button>
+        </div>
+    </main>
+    <script src="main.js"></script>
+</body>
+</html>
